--- a/views/afterlogin.pug
+++ b/views/afterlogin.pug
@@ -1,9 +1,8 @@
 extends layout
 
 block layout-content
-  div.View2
-    h1.Banner DHL IT Services - Business Process Management System
-    br
-    div.Message    
-      div.Details
-        h3 Welcome #{email}
+  div.View3
+    h1.Banner DHL Global Freight And Forwarding - Connected Logistics
+    br    
+    div.ApiFrame
+      iframe.Frame1(src='/api-docs')
