--- a/views/index.pug
+++ b/views/index.pug
@@ -2,12 +2,14 @@ extends layout
 
 block layout-content
   div.View
-    h1.Banner DHL IT Services - Business Process Management System
+    h1.Banner DHL Global Freight And Forwarding - Connected Logistics
     div.Message
       div.Title
-        h3 Customer Self-Service
-        h1 Customer On-Boarding
-      span.Details You are in control !!!
+        h3 Logistics, Connected
+        h1 
+        span.Details You are in control !!!
     div.NavButtons
       a(href="/loginlanding")
           div.NavButton Let's Go
+    div.DhlFooter
+      h6 Copyright 2019 DHL
