--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,6 +1,6 @@
 block variables
 doctype html
-html
+html(lang='en')
   head
     meta(charset="utf-8")
     link(rel="shortcut icon", href="/favicon.ico")
