--- a/views/afterlogin.pug
+++ b/views/afterlogin.pug
@@ -2,7 +2,7 @@ extends layout
 
 block layout-content
   div.View3
-    h1.Banner DHL Global Freight And Forwarding - Connected Logistics
+    h1.Banner IT Services - SI Express - BPMS
     br    
     div.ApiFrame
       iframe.Frame1(src='/api-docs')
