--- a/views/index.pug
+++ b/views/index.pug
@@ -2,12 +2,11 @@ extends layout
 
 block layout-content
   div.View
-    h1.Banner DHL Global Freight And Forwarding - Connected Logistics
+    h1.Banner System Integration Express - BPMS
     div.Message
       div.Title
-        h3 Logistics, Connected
-        h1 
-        span.Details You are in control !!!
+        h3 Service Catalog
+        span.Details Welcome to BPMS Service Catalog. 
     div.NavButtons
       a(href="/loginlanding")
           div.NavButton Let's Go
