--- a/views/login.pug
+++ b/views/login.pug
@@ -2,7 +2,7 @@ extends layout
 
 block layout-content
     div.View2
-        h1.Banner DHL Global Freight And Forwarding - Connected Logistics
+        h1.Banner SI Express - BPMS
         br
         div.Message
           h3 Login
