--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,7 +6,7 @@ html(lang='en')
     link(rel="shortcut icon", href="/favicon.ico")
     meta(name="viewport", content="width=device-width, initial-scale=1, shrink-to-fit=no")
     meta(name="theme-color", content="#000000")
-    title #{title} | DHL IT Services - Business Process Management System : Service Catalog
+    title #{title} | DHL IT Services - SI Express - BPMS
     link(rel="stylesheet" href="/style.css")
   body
     div#root
