--- a/views/housewaybill.pug
+++ b/views/housewaybill.pug
@@ -2,7 +2,7 @@ extends layout
 
 block layout-content
     div.View4
-        h1.Banner System Integration Express - BPMS Environment Health Monitor
+        h1.Banner System Integration Express - System Information
         div.View5
             div.Message2 
                 table
