--- a/public/style.css
+++ b/public/style.css
@@ -141,6 +141,20 @@ a {
 
     font-family: var(--core-font);
   }
+
+  .View6 {
+    background: gray;
+    flex: 1;
+    display: flex;
+    /* flex-direction: column;
+    justify-content: baseline; */
+    /* align-items: center; */
+    width: 100%;
+    padding: 5px;          
+    /* background-size: cover; */
+
+    font-family: var(--core-font);
+  }
 .Banner {
   display: flex;
   flex-direction: column;
